...
        //             : Icons.dark_mode_rounded,
        //       ),
        //       onPressed: widget.themeController.toggleTheme,
        //     );
        //   },
        // ),
        TextButton(onPressed: _navigateToLogin, child: const Text('Skip')),
      ],
    );
  }

  Widget _buildDontShowAgainCheckbox() {
    return Row(
...
